@@ -289,13 +289,14 @@
                         </goals>
                         <phase>verify</phase>
                     </execution>
-                    <execution>
-                        <id>ktlint-format</id>
-                        <goals>
-                            <goal>format</goal>
-                        </goals>
-                    </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
